==> rbridges12/rc-boat/pico_blink/LoRa.cpp <==
#include "LoRa.hpp"
#define REG_FIFO                 0x00
#define REG_OP_MODE              0x01
#define REG_FRF_MSB              0x06
#define REG_FRF_MID              0x07
#define REG_FRF_LSB              0x08
#define REG_PA_CONFIG            0x09
#define REG_OCP                  0x0b
#define REG_LNA                  0x0c
#define REG_FIFO_ADDR_PTR        0x0d
#define REG_FIFO_TX_BASE_ADDR    0x0e
#define REG_FIFO_RX_BASE_ADDR    0x0f
#define REG_FIFO_RX_CURRENT_ADDR 0x10
#define REG_IRQ_FLAGS            0x12
#define REG_RX_NB_BYTES          0x13
#define REG_PKT_SNR_VALUE        0x19
#define REG_PKT_RSSI_VALUE       0x1a
#define REG_RSSI_VALUE           0x1b
#define REG_MODEM_CONFIG_1       0x1d
#define REG_MODEM_CONFIG_2       0x1e
#define REG_PREAMBLE_MSB         0x20
#define REG_PREAMBLE_LSB         0x21
#define REG_PAYLOAD_LENGTH       0x22
#define REG_MODEM_CONFIG_3       0x26
#define REG_FREQ_ERROR_MSB       0x28
#define REG_FREQ_ERROR_MID       0x29
#define REG_FREQ_ERROR_LSB       0x2a
#define REG_RSSI_WIDEBAND        0x2c
#define REG_DETECTION_OPTIMIZE   0x31
#define REG_INVERTIQ             0x33
#define REG_DETECTION_THRESHOLD  0x37
#define REG_SYNC_WORD            0x39
#define REG_INVERTIQ2            0x3b
#define REG_DIO_MAPPING_1        0x40
#define REG_VERSION              0x42
#define REG_PA_DAC               0x4d
#define MODE_LONG_RANGE_MODE     0x80
#define MODE_SLEEP               0x00
#define MODE_STDBY               0x01

int LoRa::begin(long frequency)
{
  // setup pins
  // pinMode(_ss, OUTPUT);
  // gpio_init(_ss);
  // gpio_set_dir(_ss, GPIO_OUT);
  // set SS high
  // digitalWrite(_ss, HIGH);
  // gpio_put(_ss, 1);

  if (_reset != -1) {
    // pinMode(_reset, OUTPUT);
    gpio_init(_reset);
    gpio_set_dir(_reset, GPIO_OUT);

    // perform reset
    // digitalWrite(_reset, LOW);
    // delay(10);
    // digitalWrite(_reset, HIGH);
    // delay(10);
    gpio_put(_reset, 0);
    sleep_ms(10);
    gpio_put(_reset, 1);
    sleep_ms(10);
  }

  // start SPI
  // _spi->begin();
  spi_init(LORA_DEFAULT_SPI, LORA_DEFAULT_SPI_FREQUENCY);
  gpio_set_function(_miso_pin, GPIO_FUNC_SPI);
  gpio_set_function(_mosi_pin, GPIO_FUNC_SPI);
  gpio_set_function(_sck_pin, GPIO_FUNC_SPI);
  bi_decl(bi_3pins_with_func(_miso_pin, _mosi_pin, _sck_pin, GPIO_FUNC_SPI));
  gpio_init(_ss);
  gpio_set_dir(_ss, GPIO_OUT);
  gpio_put(_ss, 1);
  bi_decl(bi_1pin_with_name(_ss, "SPI CS"));

  // check version
  uint8_t version = readRegister(REG_VERSION);
  if (version != 0x12) {
    return 0;
  }

  // put in sleep mode
  sleep();

  // set frequency
  setFrequency(frequency);

  // set base addresses
  writeRegister(REG_FIFO_TX_BASE_ADDR, 0);
  writeRegister(REG_FIFO_RX_BASE_ADDR, 0);

  // set LNA boost
  writeRegister(REG_LNA, readRegister(REG_LNA) | 0x03);

  // set auto AGC
  writeRegister(REG_MODEM_CONFIG_3, 0x04);

  // set output power to 17 dBm
  setTxPower(17);

  // put in standby mode
  idle();

  return 1;
}

void LoRa::onReceive(void(*callback)(int))
{
  _onReceive = callback;

  if (callback) {
    // pinMode(_dio0, INPUT);
    gpio_init(_dio0);
#ifdef SPI_HAS_NOTUSINGINTERRUPT
    SPI.usingInterrupt(digitalPinToInterrupt(_dio0));
#endif
    // attachInterrupt(digitalPinToInterrupt(_dio0), LoRa::onDio0Rise, RISING);
    gpio_set_irq_enabled_with_callback(_dio0, GPIO_IRQ_EDGE_RISE, true, &LoRa::onDio0Rise);
  } else {
    // detachInterrupt(digitalPinToInterrupt(_dio0));
    gpio_set_irq_enabled(_dio0, GPIO_IRQ_EDGE_RISE, false);
#ifdef SPI_HAS_NOTUSINGINTERRUPT
    SPI.notUsingInterrupt(digitalPinToInterrupt(_dio0));
#endif
  }
}

uint8_t LoRa::singleTransfer(uint8_t address, uint8_t value)
{
  uint8_t response;

  // _spi->beginTransaction(_spiSettings);
  // digitalWrite(_ss, LOW);
  // _spi->transfer(address);
  // response = _spi->transfer(value);
  // digitalWrite(_ss, HIGH);
  // _spi->endTransaction();
  asm volatile("nop \n nop \n nop");
  gpio_put(_ss, 0);  // Active low
  asm volatile("nop \n nop \n nop");
  spi_write_blocking(LORA_DEFAULT_SPI, &address, 1);
  spi_write_read_blocking(LORA_DEFAULT_SPI, &value, &response, 1);
  asm volatile("nop \n nop \n nop");
  gpio_put(_ss, 1);
  asm volatile("nop \n nop \n nop");

  return response;
}
